docs(validation): create progressive validation runbook and update Phase 13 plan
- Created comprehensive PROGRESSIVE_VALIDATION.md runbook (1000+ lines)
- Covers 7 validation areas from basic ops to KubeVirt live migration
- Updated 13-01-PLAN.md to use progressive validation approach
- Systematic build-up: foundation tests → KubeVirt → live migration
- Includes pre-validation checklist, detailed procedures, troubleshooting

Runbook covers:
- VAL-01: Basic volume operations (create/delete via SSH)
- VAL-02: Filesystem volume lifecycle (stage/publish/persist)
- VAL-03: Block volume lifecycle (no filesystem formatting)
- VAL-04: Error resilience (health check, circuit breaker, graceful shutdown)
- VAL-05: Multi-node operations (RWO conflict detection)
- VAL-06: KubeVirt VM boot with block volumes
- VAL-07: KubeVirt live migration with data integrity validation

--- a/.planning/phases/13-hardware-validation/13-01-PLAN.md
+++ b/.planning/phases/13-hardware-validation/13-01-PLAN.md
@@ -5,41 +5,58 @@ type: execute
 wave: 1
 depends_on: []
 files_modified:
+  - test/e2e/PROGRESSIVE_VALIDATION.md
   - test/e2e/HARDWARE_VALIDATION.md
 autonomous: false
 
 must_haves:
   truths:
-    - "KubeVirt VM boots with RDS block volume"
-    - "VM can read and write data to block volume"
-    - "KubeVirt live migration moves VM between nodes"
-    - "Migration metrics are emitted during migration"
-    - "Data integrity preserved after migration"
+    - "Basic volume operations (create/delete) work via SSH"
+    - "Filesystem volumes can be staged, published, written to, and persist data"
+    - "Block volumes work without filesystem formatting"
+    - "Error resilience features (health check, circuit breaker) function correctly"
+    - "RWO attachment conflicts are detected and enforced"
+    - "KubeVirt VMs boot with RDS block volumes"
+    - "KubeVirt live migration completes with data integrity preserved"
+    - "Migration metrics are emitted"
   artifacts:
+    - path: "test/e2e/PROGRESSIVE_VALIDATION.md"
+      provides: "Comprehensive validation runbook with all test procedures"
+      min_lines: 800
     - path: "test/e2e/HARDWARE_VALIDATION.md"
-      provides: "Hardware validation results and runbook"
-      min_lines: 50
+      provides: "Validation results and test summary"
+      min_lines: 100
   key_links:
-    - from: "PVC with volumeMode: Block"
-      to: "KubeVirt VirtualMachine"
-      via: "dataVolumeTemplates or volumes.persistentVolumeClaim"
-      pattern: "volumeMode.*Block"
+    - from: "Progressive validation runbook"
+      to: "Hardware validation results"
+      via: "Systematic execution of all test scenarios"
+      pattern: "VAL-\\d{2}"
 ---
 
 <objective>
-Validate that KubeVirt VMs boot and live migrate successfully with RDS block volumes on the metal cluster.
+Systematically validate RDS CSI driver functionality on metal cluster using progressive validation approach.
 
-Purpose: Prove Phase 11-12 block volume implementation works in production environment with real KubeVirt workloads. This is the final validation gate for v0.6.0 Block Volume Support milestone.
+Purpose: Build confidence from basic operations through complex scenarios to KubeVirt live migration. This comprehensive validation proves the v0.6.0 implementation works in production with all Phase 14 safety features.
+
+Approach: Execute test/e2e/PROGRESSIVE_VALIDATION.md runbook which covers 7 validation areas:
+- VAL-01: Basic volume operations
+- VAL-02: Filesystem volume lifecycle
+- VAL-03: Block volume lifecycle
+- VAL-04: Error resilience (health check, circuit breaker, graceful shutdown)
+- VAL-05: Multi-node operations (RWO conflict detection)
+- VAL-06: KubeVirt VM boot
+- VAL-07: KubeVirt live migration
 
 Output:
-- Hardware validation results documented
-- Known issues captured (if any)
+- Detailed validation results in HARDWARE_VALIDATION.md
+- Any issues documented with resolutions
 - v0.6.0 release readiness confirmed
 </objective>
 
 <execution_context>
 @/Users/whiskey/.claude/get-shit-done/workflows/execute-plan.md
 @/Users/whiskey/.claude/get-shit-done/templates/summary.md
+@test/e2e/PROGRESSIVE_VALIDATION.md
 </execution_context>
 
 <context>
@@ -47,6 +64,7 @@ Output:
 @.planning/ROADMAP.md
 @.planning/STATE.md
 @.planning/phases/13-hardware-validation/13-CONTEXT.md
+@.planning/phases/14-error-resilience-and-mount-storm-prevention/14-04-SUMMARY.md
 @.planning/phases/11-block-volume-node-operations/11-03-SUMMARY.md
 @.planning/phases/12-compatibility-and-quality/12-01-SUMMARY.md
 </context>
@@ -54,397 +72,324 @@ Output:
 <tasks>
 
 <task type="auto">
-  <name>Task 1: Deploy latest driver version</name>
-  <files>N/A - kubectl operations</files>
+  <name>Task 1: Pre-validation environment setup</name>
+  <files>deploy/kubernetes/controller.yaml (ConfigMap verification)</files>
   <action>
-  Wait for any active CI/CD pipeline to complete (check GitHub/Gitea actions).
+  Prepare cluster for validation with Phase 14 safety features.
 
-  Deploy the latest driver version to the metal cluster:
-
-  1. Check current deployed version:
+  1. Verify ConfigMap has nqn-prefix:
      ```bash
-     kubectl -n rds-csi-system get pods -o wide
-     kubectl -n rds-csi-system get ds rds-csi-node -o jsonpath='{.spec.template.spec.containers[0].image}'
+     kubectl -n rds-csi get configmap rds-csi-config -o yaml | grep nqn-prefix
+     # Expected: nqn-prefix: nqn.2000-02.com.mikrotik:pvc-
      ```
 
-  2. If not the latest version (post-Phase 12), trigger redeployment:
+  2. Build and push latest driver image:
      ```bash
-     # Option 1: If using kustomize
-     kubectl apply -k deploy/kubernetes/
-
-     # Option 2: If using Helm
-     helm upgrade rds-csi deploy/helm/rds-csi/ -n rds-csi-system
-
-     # Option 3: Trigger rollout restart if image uses :latest or :dev tag
-     kubectl -n rds-csi-system rollout restart deployment rds-csi-controller
-     kubectl -n rds-csi-system rollout restart daemonset rds-csi-node
+     # Build with all Phase 14 features
+     make docker
+     docker tag ghcr.io/3whiskeywhiskey/rds-csi:dev ghcr.io/3whiskeywhiskey/rds-csi:v0.6.0-rc1
+     docker push ghcr.io/3whiskeywhiskey/rds-csi:dev
+     docker push ghcr.io/3whiskeywhiskey/rds-csi:v0.6.0-rc1
      ```
 
-  3. Wait for pods to be ready:
+  3. Deploy updated driver:
      ```bash
-     kubectl -n rds-csi-system rollout status deployment rds-csi-controller
-     kubectl -n rds-csi-system rollout status daemonset rds-csi-node
+     kubectl -n rds-csi rollout restart deployment rds-csi-controller
+     kubectl -n rds-csi rollout restart daemonset rds-csi-node
      ```
 
-  4. Verify node plugin running on worker nodes:
+  4. Wait for rollout to complete:
      ```bash
-     kubectl get nodes
-     kubectl -n rds-csi-system get pods -o wide
+     kubectl -n rds-csi rollout status deployment rds-csi-controller --timeout=5m
+     kubectl -n rds-csi rollout status daemonset rds-csi-node --timeout=5m
+     ```
+
+  5. Verify all pods healthy:
+     ```bash
+     kubectl -n rds-csi get pods -o wide
+     # All pods should be Running with no restarts
+     ```
+
+  6. Check for CSI_MANAGED_NQN_PREFIX in node logs:
+     ```bash
+     kubectl -n rds-csi logs -l app=rds-csi-node --tail=20 | grep -i "nqn\|prefix"
+     # Should show NQN prefix loaded from ConfigMap
+     ```
+
+  7. Clean up any previous test resources:
+     ```bash
+     kubectl delete pvc -l test=rds-csi-validation --all-namespaces
+     kubectl delete pod -l test=rds-csi-validation --all-namespaces
+     kubectl delete vm -l test=rds-csi-validation --all-namespaces
      ```
   </action>
   <verify>
-  - `kubectl -n rds-csi-system get pods` shows all pods Running
-  - Controller pod ready (1/1)
-  - Node pods running on each worker node
-  - No pod restarts or CrashLoopBackOff
+  - ConfigMap has nqn-prefix key
+  - Latest driver image built and pushed
+  - All pods Running (controller + nodes)
+  - No CrashLoopBackOff or errors in logs
+  - NQN prefix loaded correctly on nodes
+  - Previous test resources cleaned up
   </verify>
-  <done>Driver deployed and healthy on metal cluster</done>
+  <done>Environment ready for progressive validation</done>
 </task>
 
 <task type="auto">
-  <name>Task 2: Create test PVC and KubeVirt VM</name>
-  <files>test/e2e/HARDWARE_VALIDATION.md (to document applied manifests)</files>
+  <name>Task 2: Execute VAL-01 through VAL-05 (Foundation tests)</name>
+  <files>test/e2e/HARDWARE_VALIDATION.md</files>
   <action>
-  Create test resources for hardware validation.
+  Execute foundational validation tests from PROGRESSIVE_VALIDATION.md runbook.
 
-  1. Create a block-mode PVC (5Gi for reasonable test size):
-     ```yaml
-     # test-block-pvc.yaml
-     apiVersion: v1
-     kind: PersistentVolumeClaim
-     metadata:
-       name: test-block-vm-disk
-       namespace: default
-     spec:
-       accessModes:
-         - ReadWriteMany  # RWX for live migration
-       volumeMode: Block
-       resources:
-         requests:
-           storage: 5Gi
-       storageClassName: rds-csi  # or your StorageClass name
-     ```
-     Apply: `kubectl apply -f test-block-pvc.yaml`
+  Follow the runbook procedures for:
 
-  2. Verify PVC bound:
-     ```bash
-     kubectl get pvc test-block-vm-disk
-     kubectl describe pvc test-block-vm-disk
-     ```
+  **VAL-01: Basic Volume Operations**
+  - Create/delete filesystem PVC
+  - Verify volume appears on RDS
+  - Verify PV created and deleted
 
-  3. Create a simple KubeVirt VirtualMachine:
-     ```yaml
-     # test-block-vm.yaml
-     apiVersion: kubevirt.io/v1
-     kind: VirtualMachine
-     metadata:
-       name: test-block-vm
-       namespace: default
-     spec:
-       running: true
-       template:
-         metadata:
-           labels:
-             kubevirt.io/vm: test-block-vm
-         spec:
-           domain:
-             devices:
-               disks:
-                 - name: rootdisk
-                   disk:
-                     bus: virtio
-                 - name: datadisk
-                   disk:
-                     bus: virtio
-               interfaces:
-                 - name: default
-                   masquerade: {}
-             resources:
-               requests:
-                 memory: 1Gi
-                 cpu: 1
-           networks:
-             - name: default
-               pod: {}
-           volumes:
-             - name: rootdisk
-               containerDisk:
-                 image: quay.io/kubevirt/cirros-container-disk-demo:latest
-             - name: datadisk
-               persistentVolumeClaim:
-                 claimName: test-block-vm-disk
-     ```
-     Apply: `kubectl apply -f test-block-vm.yaml`
+  **VAL-02: Filesystem Volume Lifecycle**
+  - Create PVC with WaitForFirstConsumer
+  - Stage, publish, write data
+  - Verify data persists after remount
+  - Unstage and cleanup
 
-  4. Wait for VM to start:
-     ```bash
-     kubectl get vmi test-block-vm -w
-     # Wait for "Running" phase
-     ```
+  **VAL-03: Block Volume Lifecycle**
+  - Create block-mode PVC
+  - Verify block device in pod
+  - Write/read from block device
+  - No filesystem formatting
 
-  5. Verify VM running and on which node:
-     ```bash
-     kubectl get vmi test-block-vm -o wide
-     ```
+  **VAL-04: Error Resilience**
+  - Verify filesystem health check runs
+  - Verify circuit breaker initialized
+  - Test graceful shutdown timing
 
-  Document the applied manifests in test/e2e/HARDWARE_VALIDATION.md.
+  **VAL-05: Multi-Node Operations**
+  - Create RWO PVC on node A
+  - Verify attachment conflict when attempting node B
+  - Verify attachment succeeds after grace period
+
+  Document results in HARDWARE_VALIDATION.md as you complete each test.
+  Include:
+  - Test name and objective
+  - Commands executed
+  - Actual vs expected results
+  - Any issues encountered
+  - Screenshots or log excerpts if relevant
   </action>
   <verify>
-  - PVC shows Bound status
-  - VirtualMachineInstance shows Running phase
-  - VM scheduled on a worker node
-  - No errors in CSI driver logs: `kubectl -n rds-csi-system logs deployment/rds-csi-controller`
+  - All VAL-01 through VAL-05 tests executed
+  - Results documented in HARDWARE_VALIDATION.md
+  - All foundational tests passed (or issues documented)
   </verify>
-  <done>Block PVC bound and KubeVirt VM running with RDS block volume</done>
+  <done>Foundation validation tests complete</done>
 </task>
 
 <task type="auto">
-  <name>Task 3: Validate I/O operations on block volume</name>
-  <files>test/e2e/HARDWARE_VALIDATION.md (to document results)</files>
+  <name>Task 3: Execute VAL-06 (KubeVirt VM Boot)</name>
+  <files>test/e2e/HARDWARE_VALIDATION.md</files>
   <action>
-  Access VM console and test block device I/O.
+  Execute KubeVirt VM boot test from PROGRESSIVE_VALIDATION.md runbook.
 
-  1. Access VM console:
-     ```bash
-     virtctl console test-block-vm
-     # Login: cirros / gocubsgo (default cirros credentials)
-     ```
+  Follow VAL-06 procedures:
 
-  2. Find the block device (should be /dev/vdb for datadisk):
-     ```bash
-     lsblk
-     # Look for vdb (5G)
-     ```
+  1. Create RWX block PVC (5Gi) for VM
+  2. Create KubeVirt VM with cirros and RDS block volume
+  3. Wait for VM to reach Running phase
+  4. Access VM console (virtctl console)
+  5. Verify block device visible (/dev/vdb)
+  6. Create ext4 filesystem on block device
+  7. Mount filesystem to /mnt/data
+  8. Write test data (100MB random file)
+  9. Generate and save checksum for migration validation
+  10. Sync and exit console
 
-  3. Write data pattern for integrity check:
-     ```bash
-     # Create a filesystem (if first time)
-     sudo mkfs.ext4 /dev/vdb
-
-     # Mount and write test data
-     sudo mkdir -p /mnt/data
-     sudo mount /dev/vdb /mnt/data
-
-     # Create test file with known pattern
-     sudo dd if=/dev/urandom of=/mnt/data/testfile bs=1M count=100
-     sudo md5sum /mnt/data/testfile | sudo tee /mnt/data/checksum.txt
-
-     # Verify checksum was saved
-     cat /mnt/data/checksum.txt
-
-     # Sync to ensure data is flushed
-     sync
-     ```
-
-  4. Record checksum for post-migration validation.
-
-  5. Exit console (Ctrl+] or type 'exit').
-
-  Document I/O test results in test/e2e/HARDWARE_VALIDATION.md.
+  Document:
+  - PVC creation and binding
+  - VM startup time and node placement
+  - Block device detection
+  - Filesystem creation success
+  - Checksum value for later comparison
   </action>
   <verify>
-  - Block device visible in VM (lsblk shows /dev/vdb)
-  - Filesystem creation successful (mkfs.ext4)
-  - Test data written (100MB file)
-  - Checksum recorded for validation
+  - RWX block PVC bound successfully
+  - VM reached Running phase
+  - Block device visible as /dev/vdb in VM
+  - Filesystem created and mounted
+  - Test data written with checksum saved
   </verify>
-  <done>I/O operations validated on block volume</done>
+  <done>KubeVirt VM boot validated with block volume</done>
 </task>
 
 <task type="auto">
-  <name>Task 4: Execute live migration and validate</name>
-  <files>test/e2e/HARDWARE_VALIDATION.md (to document results)</files>
+  <name>Task 4: Execute VAL-07 (KubeVirt Live Migration)</name>
+  <files>test/e2e/HARDWARE_VALIDATION.md</files>
   <action>
-  Perform KubeVirt live migration and validate data integrity.
+  Execute live migration test from PROGRESSIVE_VALIDATION.md runbook.
 
-  1. Record current node before migration:
-     ```bash
-     kubectl get vmi test-block-vm -o jsonpath='{.status.nodeName}'
-     # Save this for comparison
-     ```
+  Follow VAL-07 procedures:
 
-  2. Initiate live migration:
-     ```bash
-     # Create migration request
-     kubectl apply -f - <<EOF
-     apiVersion: kubevirt.io/v1
-     kind: VirtualMachineInstanceMigration
-     metadata:
-       name: test-block-vm-migration-1
-     spec:
-       vmiName: test-block-vm
-     EOF
-     ```
+  1. Record VM's current node
+  2. Create VirtualMachineInstanceMigration object
+  3. Watch migration progress (kubectl get vmim -w)
+  4. Verify migration reaches Succeeded phase
+  5. Confirm VM running on different node
+  6. Access VM console on new node
+  7. Mount /dev/vdb to /mnt/data
+  8. Verify checksum matches pre-migration value
+  9. Query controller metrics for migration stats
+  10. Document migration duration and throughput
 
-  3. Watch migration progress:
-     ```bash
-     kubectl get vmim test-block-vm-migration-1 -w
-     # Wait for "Succeeded" phase
-     ```
+  Critical verification:
+  - Checksum MUST match exactly (data integrity)
+  - Migration metrics MUST be emitted
+  - VM MUST be on different node
 
-  4. Verify VM on new node:
-     ```bash
-     kubectl get vmi test-block-vm -o jsonpath='{.status.nodeName}'
-     # Should be different from step 1
-     ```
-
-  5. Check migration metrics from controller:
-     ```bash
-     # Port-forward to metrics endpoint
-     kubectl -n rds-csi-system port-forward deployment/rds-csi-controller 9809:9809 &
-     PF_PID=$!
-     sleep 2
-
-     # Fetch metrics
-     curl -s http://localhost:9809/metrics | grep -E 'migrations_total|migration_duration'
-
-     # Clean up port-forward
-     kill $PF_PID
-     ```
-
-  6. Access VM console and verify data integrity:
-     ```bash
-     virtctl console test-block-vm
-     # Login
-
-     # Mount and verify checksum
-     sudo mount /dev/vdb /mnt/data
-     md5sum /mnt/data/testfile
-     cat /mnt/data/checksum.txt
-     # Checksums must match!
-
-     exit
-     ```
-
-  Document migration results, node change, metrics, and data integrity in test/e2e/HARDWARE_VALIDATION.md.
+  Document:
+  - Source and target nodes
+  - Migration duration
+  - Data integrity verification (checksum comparison)
+  - Migration metrics values
+  - Any warnings or errors during migration
   </action>
   <verify>
-  - Migration completed successfully (Succeeded phase)
-  - VM running on different node than before migration
-  - Migration metrics emitted (migrations_total, migration_duration_seconds)
-  - Checksum matches after migration (no data corruption)
+  - Migration completed (Succeeded phase)
+  - VM migrated to different node
+  - Data integrity verified (checksums match)
+  - Migration metrics emitted (migrations_total, duration)
+  - No data corruption or errors
   </verify>
-  <done>Live migration completed with data integrity preserved</done>
+  <done>Live migration validated end-to-end with data integrity</done>
 </task>
 
 <task type="checkpoint:human-verify" gate="blocking">
   <what-built>
-  Hardware validation complete:
-  - Driver deployed to metal cluster
-  - KubeVirt VM booted with RDS block volume
-  - I/O operations validated on block device
-  - Live migration executed and metrics captured
-  - Data integrity confirmed after migration
+  Progressive hardware validation complete across 7 test areas:
+
+  **Foundation (VAL-01 to VAL-05):**
+  - Basic volume operations via SSH
+  - Filesystem volume full lifecycle
+  - Block volume operations
+  - Error resilience features (health check, circuit breaker)
+  - Multi-node RWO conflict detection
+
+  **KubeVirt (VAL-06 to VAL-07):**
+  - VM boot with RDS block volume
+  - Live migration with data integrity
+  - Migration metrics collection
   </what-built>
   <how-to-verify>
-  Review the documented results in test/e2e/HARDWARE_VALIDATION.md:
+  Review test/e2e/HARDWARE_VALIDATION.md for complete results:
 
-  1. Confirm PVC bound and VM running
-  2. Verify I/O test passed (checksum recorded)
-  3. Confirm migration succeeded (node changed)
-  4. Verify migration metrics were emitted
-  5. Confirm data integrity (checksums match)
+  1. **Foundation Tests (VAL-01 to VAL-05):**
+     - All basic operations successful?
+     - Data persistence verified?
+     - Error resilience features working?
+     - Attachment conflicts detected correctly?
 
-  If all criteria pass, v0.6.0 Block Volume Support is validated.
+  2. **KubeVirt Tests (VAL-06 to VAL-07):**
+     - VM booted successfully?
+     - Block device accessible in VM?
+     - Migration completed to different node?
+     - Checksums matched (data integrity)?
+     - Migration metrics emitted?
 
-  If any issues encountered:
-  - Note specific failures
-  - Capture relevant logs
-  - Determine if blockers or documentation items
+  3. **Overall Assessment:**
+     - Any critical failures?
+     - Any non-critical issues to document?
+     - Ready for v0.6.0 release?
+
+  If all critical tests passed, type "validated" to proceed.
+  If issues found, describe them for resolution or documentation.
   </how-to-verify>
-  <resume-signal>Type "validated" if all tests passed, or describe any issues found</resume-signal>
+  <resume-signal>Type "validated" if tests passed, or describe issues</resume-signal>
 </task>
 
 <task type="auto">
-  <name>Task 6: Cleanup and document final results</name>
+  <name>Task 5: Cleanup and finalize documentation</name>
   <files>test/e2e/HARDWARE_VALIDATION.md</files>
   <action>
-  Clean up test resources and finalize documentation.
+  Clean up test resources and finalize validation documentation.
 
-  1. Delete test resources:
+  1. Delete all test resources:
      ```bash
-     kubectl delete vm test-block-vm
-     kubectl delete pvc test-block-vm-disk
-     kubectl delete vmim test-block-vm-migration-1
+     # KubeVirt resources
+     kubectl delete vm test-validation-vm
+     kubectl delete vmim test-validation-migration
+
+     # Test PVCs (with label selector)
+     kubectl delete pvc -l test=rds-csi-validation --all-namespaces
+
+     # Test pods
+     kubectl delete pod -l test=rds-csi-validation --all-namespaces
      ```
 
-  2. Verify cleanup:
+  2. Verify cleanup on RDS:
      ```bash
-     kubectl get pvc,vm,vmi,vmim | grep test-block
-     # Should return nothing
+     ssh metal-csi@10.42.241.3 '/disk print detail where slot~"pvc-"'
+     # Should only show production volumes, no test volumes
      ```
 
-  3. Finalize test/e2e/HARDWARE_VALIDATION.md with:
-     - Validation date
-     - Driver version tested
-     - All test results (pass/fail)
-     - Any issues encountered and resolutions
-     - Recommendations or notes for operators
+  3. Finalize HARDWARE_VALIDATION.md using template from runbook:
+     - Summary table with all 7 test results
+     - Pass/fail status for each test
+     - Total validation duration
+     - Issues encountered and resolutions
+     - Recommendations for operators
+     - Sign-off checklist
 
-  4. Create the documentation file structure:
-     ```markdown
-     # Hardware Validation Results
+  4. Review driver logs for any warnings or errors:
+     ```bash
+     kubectl -n rds-csi logs -l app=rds-csi-controller --tail=200 > controller-logs.txt
+     kubectl -n rds-csi logs -l app=rds-csi-node --tail=200 > node-logs.txt
+     # Attach relevant excerpts to documentation
+     ```
 
-     ## Summary
-     - Date: YYYY-MM-DD
-     - Driver version: vX.Y.Z
-     - Cluster: metal
-     - Result: PASS/FAIL
-
-     ## Tests Performed
-
-     ### VAL-01: VM Boot with Block Volume
-     - PVC: test-block-vm-disk (5Gi, RWX, Block)
-     - VM: test-block-vm (cirros + data disk)
-     - Result: PASS
-     - Notes: ...
-
-     ### VAL-02: Live Migration
-     - Source node: nodeA
-     - Target node: nodeB
-     - Migration duration: Xs
-     - Result: PASS
-     - Notes: ...
-
-     ### VAL-03: Migration Metrics
-     - migrations_total: observed
-     - migration_duration_seconds: observed
-     - Result: PASS
-
-     ### Data Integrity
-     - Pre-migration checksum: abc123...
-     - Post-migration checksum: abc123...
-     - Result: MATCH/MISMATCH
-
-     ## Issues Encountered
-     (None or list)
-
-     ## Recommendations
-     (None or list)
+  5. Verify no orphaned resources:
+     ```bash
+     kubectl get pv | grep rds-csi
+     kubectl -n rds-csi get events --sort-by='.lastTimestamp' | tail -50
      ```
   </action>
   <verify>
-  - Test resources cleaned up
-  - HARDWARE_VALIDATION.md created with complete results
-  - All VAL-XX requirements verified
+  - All test resources deleted
+  - No orphaned volumes on RDS
+  - HARDWARE_VALIDATION.md complete with all results
+  - Summary table filled out
+  - Issues documented
+  - Sign-off checklist complete
   </verify>
-  <done>Cleanup complete and validation documented</done>
+  <done>Validation complete and documented</done>
 </task>
 
 </tasks>
 
 <verification>
-All Phase 13 success criteria validated:
-1. KubeVirt VM boots successfully with RDS block volume on metal cluster
-2. VM can read and write data to block volume (I/O validation)
-3. KubeVirt live migration completes end-to-end (VM moves between nodes)
-4. Migration metrics (migrations_total, migration_duration_seconds) are emitted correctly
-5. No data corruption detected after migration (checksum validation)
+All Phase 13 success criteria validated through progressive testing:
+
+**Foundation:**
+1. ✓ Basic volume create/delete operations work via SSH
+2. ✓ Filesystem volumes support full lifecycle (stage/publish/data/persist/unstage)
+3. ✓ Block volumes work without filesystem formatting
+4. ✓ Error resilience features function (health check, circuit breaker, graceful shutdown)
+5. ✓ RWO attachment conflicts detected and enforced
+
+**KubeVirt:**
+6. ✓ VMs boot successfully with RDS block volumes
+7. ✓ Live migration completes end-to-end
+8. ✓ Migration metrics emitted correctly
+9. ✓ Data integrity preserved after migration (checksum validation)
+
+**Documentation:**
+10. ✓ Progressive validation runbook created (PROGRESSIVE_VALIDATION.md)
+11. ✓ Hardware validation results documented (HARDWARE_VALIDATION.md)
 </verification>
 
 <success_criteria>
-- test/e2e/HARDWARE_VALIDATION.md exists with complete results
-- All VAL-01, VAL-02, VAL-03 requirements satisfied
+- test/e2e/PROGRESSIVE_VALIDATION.md exists with comprehensive test procedures (800+ lines)
+- test/e2e/HARDWARE_VALIDATION.md exists with complete validation results (100+ lines)
+- All 7 validation areas (VAL-01 through VAL-07) executed and documented
+- All critical tests passed (or blockers documented for resolution)
 - v0.6.0 Block Volume Support milestone validated for release
 </success_criteria>
 
