docs(roadmap): add Phase 15 - VolumeAttachment-based state rebuild
Add v0.7.0 milestone with Phase 15 for refactoring attachment state
management to use VolumeAttachment objects as source of truth.

Context: Bug report identified architectural issue where PV annotations
are used as persistent state during controller rebuild, causing stale
attachment errors after detachment (git.srvlab.io/whiskey/rds-csi-driver).

Current fix (62197ce) clears annotations on detachment, which solves the
immediate bug. However, VolumeAttachment-based rebuild is more
architecturally correct:
- VolumeAttachment objects managed by external-attacher (authoritative)
- No risk of stale state from annotations
- Aligns with CSI best practices
- Annotations kept for informational/debugging purposes only

Phase 15 plans:
- VolumeAttachment watcher implementation
- State rebuild from VolumeAttachment objects
- Grace period detection from multiple VolumeAttachment objects
- Testing with controller restart scenarios

Not urgent - current fix is sufficient for v0.6.0. This is a quality
improvement for future milestone.

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -5,7 +5,8 @@
 - ✅ **v1 Production Stability** - Phases 1-4 (shipped 2026-01-31)
 - ✅ **v0.3.0 Volume Fencing** - Phases 5-7 (shipped 2026-02-03)
 - ✅ **v0.5.0 KubeVirt Live Migration** - Phases 8-10 (shipped 2026-02-03)
-- 🚧 **v0.6.0 Block Volume Support** - Phases 11-13 (in progress)
+- 🚧 **v0.6.0 Block Volume Support** - Phases 11-14 (in progress)
+- 📋 **v0.7.0 State Management Refactoring** - Phase 15 (planned)
 
 ## Phases
 
@@ -197,10 +198,37 @@ Plans:
 - [x] 14-03-PLAN.md — Circuit breaker and filesystem health checks
 - [x] 14-04-PLAN.md — Graceful shutdown and deployment configuration
 
+### 📋 v0.7.0 State Management Refactoring (Planned)
+
+**Milestone Goal:** Use Kubernetes VolumeAttachment objects as source of truth for attachment state
+
+#### Phase 15: VolumeAttachment-Based State Rebuild
+**Goal**: Controller rebuilds attachment state from VolumeAttachment objects instead of PV annotations
+**Depends on**: Phase 14
+**Requirements**: ATTACH-01, ATTACH-02, ATTACH-03, ATTACH-04
+**Success Criteria** (what must be TRUE):
+  1. **VolumeAttachment is source of truth** - On startup, controller lists VolumeAttachment objects and rebuilds state from them (not PV annotations)
+  2. **Grace period still works** - Multi-attach during KubeVirt migration is detected correctly from multiple VolumeAttachment objects
+  3. **PV annotations are informational** - Annotations (attached-node, attached-at) are written for debugging but never read during rebuild
+  4. **No stale state possible** - If VolumeAttachment doesn't exist, volume is definitely detached (no annotation-based false positives)
+  5. **Backward compatible** - Existing volumes with stale annotations are handled correctly (annotations ignored during rebuild)
+**Rationale**:
+  - VolumeAttachment objects are managed by external-attacher (authoritative source)
+  - PV annotations can become stale (e.g., if clearing fails, or manual kubectl operations)
+  - Current fix (62197ce) clears annotations on detach, but VolumeAttachment-based rebuild is more architecturally correct
+  - Aligns with CSI best practices (external-attacher owns attachment lifecycle)
+**Plans**: 4 plans
+
+Plans:
+- [ ] 15-01-PLAN.md — VolumeAttachment watcher and list/watch implementation
+- [ ] 15-02-PLAN.md — Rebuild attachment state from VolumeAttachment objects on startup
+- [ ] 15-03-PLAN.md — Grace period detection from multiple VolumeAttachment objects
+- [ ] 15-04-PLAN.md — Testing: controller restart scenarios, stale annotation handling
+
 ## Progress
 
 **Execution Order:**
-Phases execute in numeric order: 11 → 12 → 13 → 14
+Phases execute in numeric order: 11 → 12 → 13 → 14 → 15 (planned)
 
 | Phase | Milestone | Plans Complete | Status | Completed |
 |-------|-----------|----------------|--------|-----------|
@@ -218,3 +246,4 @@ Phases execute in numeric order: 11 → 12 → 13 → 14
 | 12. Compatibility and Quality | v0.6.0 | 1/1 | Complete | 2026-02-03 |
 | 13. Hardware Validation | v0.6.0 | 0/1 | In progress | - |
 | 14. Error Resilience | v0.6.0 | 4/4 | Complete | 2026-02-03 |
+| 15. VolumeAttachment-Based State | v0.7.0 | 0/4 | Planned | - |
