docs(state): Phase 13 complete - v0.6.0 milestone achieved
Updated STATE.md and ROADMAP.md to reflect Phase 13 completion:
- Hardware validation passed (KubeVirt VM boot + live migration)
- v0.6.0 Block Volume Support milestone: 9/9 plans complete
- Progress: 94% (50/53 plans across all phases)

All v0.6.0 success criteria met:
- Block volume support with mknod (no mount storms)
- KubeVirt VM boot with RDS storage
- Live migration end-to-end validated
- RWX multi-attach during migration works

Ready for v0.6.0 release.

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -176,7 +176,7 @@ Plans:
 **Plans**: 1 plan
 
 Plans:
-- [ ] 13-01-PLAN.md — Hardware validation on metal cluster
+- [x] 13-01-PLAN.md — Hardware validation on metal cluster
 
 #### Phase 14: Error Resilience and Mount Storm Prevention
 **Goal**: Prevent corrupted filesystems from causing cluster-wide mount storms and system volume interference
@@ -244,6 +244,6 @@ Phases execute in numeric order: 11 → 12 → 13 → 14 → 15 (planned)
 | 10. Observability and Validation | v0.5.0 | 5/5 | Complete | 2026-02-03 |
 | 11. Block Volume Node Operations | v0.6.0 | 3/3 | Complete | 2026-02-03 |
 | 12. Compatibility and Quality | v0.6.0 | 1/1 | Complete | 2026-02-03 |
-| 13. Hardware Validation | v0.6.0 | 0/1 | In progress | - |
+| 13. Hardware Validation | v0.6.0 | 1/1 | Complete | 2026-02-04 |
 | 14. Error Resilience | v0.6.0 | 4/4 | Complete | 2026-02-03 |
 | 15. VolumeAttachment-Based State | v0.7.0 | 0/4 | Planned | - |
