fix(15): orchestrator corrections

--- a/.planning/milestones/v0.5-ROADMAP.md
+++ b/.planning/milestones/v0.5-ROADMAP.md
@@ -2,16 +2,16 @@
 
 ## Milestones
 
-- ✅ **v1 Production Stability** - Phases 1-4 (shipped 2026-01-31)
-- ✅ **v0.3.0 Volume Fencing** - Phases 5-7 (shipped 2026-02-03)
-- ✅ **v0.5.0 KubeVirt Live Migration** - Phases 8-10 (shipped 2026-02-03)
-- 🚧 **v0.6.0 Block Volume Support** - Phases 11-14 (in progress)
-- 📋 **v0.7.0 State Management Refactoring** - Phase 15 (planned)
+- v1 Production Stability - Phases 1-4 (shipped 2026-01-31)
+- v0.3.0 Volume Fencing - Phases 5-7 (shipped 2026-02-03)
+- v0.5.0 KubeVirt Live Migration - Phases 8-10 (shipped 2026-02-03)
+- v0.6.0 Block Volume Support - Phases 11-14 (complete 2026-02-04)
+- v0.7.0 State Management Refactoring - Phase 15 (planned)
 
 ## Phases
 
 <details>
-<summary>✅ v1 Production Stability (Phases 1-4) - SHIPPED 2026-01-31</summary>
+<summary>v1 Production Stability (Phases 1-4) - SHIPPED 2026-01-31</summary>
 
 ### Phase 1: Device Path Resolution
 **Goal**: Volumes remain accessible after NVMe controller renumbering
@@ -57,7 +57,7 @@ Plans:
 </details>
 
 <details>
-<summary>✅ v0.3.0 Volume Fencing (Phases 5-7) - SHIPPED 2026-02-03</summary>
+<summary>v0.3.0 Volume Fencing (Phases 5-7) - SHIPPED 2026-02-03</summary>
 
 ### Phase 5: Attachment Manager
 **Goal**: Track and persist volume-to-node attachments
@@ -92,7 +92,7 @@ Plans:
 </details>
 
 <details>
-<summary>✅ v0.5.0 KubeVirt Live Migration (Phases 8-10) - SHIPPED 2026-02-03</summary>
+<summary>v0.5.0 KubeVirt Live Migration (Phases 8-10) - SHIPPED 2026-02-03</summary>
 
 ### Phase 8: Core RWX Capability
 **Goal**: KubeVirt VMs can live migrate using RWX block PVCs
@@ -129,7 +129,8 @@ Plans:
 
 </details>
 
-### 🚧 v0.6.0 Block Volume Support (In Progress)
+<details>
+<summary>v0.6.0 Block Volume Support (Phases 11-14) - COMPLETE 2026-02-04</summary>
 
 **Milestone Goal:** Implement CSI block volume support to enable KubeVirt VMs with RDS storage
 
@@ -146,9 +147,9 @@ Plans:
 **Plans**: 3 plans
 
 Plans:
-- [x] 11-01-PLAN.md — MakeFile helper and NodeStageVolume block support
-- [x] 11-02-PLAN.md — NodePublishVolume and NodeUnpublishVolume block support
-- [x] 11-03-PLAN.md — NodeUnstageVolume block support and unit tests
+- [x] 11-01-PLAN.md - MakeFile helper and NodeStageVolume block support
+- [x] 11-02-PLAN.md - NodePublishVolume and NodeUnpublishVolume block support
+- [x] 11-03-PLAN.md - NodeUnstageVolume block support and unit tests
 
 #### Phase 12: Compatibility and Quality
 **Goal**: Existing filesystem volumes work without regression, clear error messages
@@ -161,7 +162,7 @@ Plans:
 **Plans**: 1 plan
 
 Plans:
-- [x] 12-01-PLAN.md — Regression tests and error message validation
+- [x] 12-01-PLAN.md - Regression tests and error message validation
 
 #### Phase 13: Hardware Validation
 **Goal**: KubeVirt VMs boot and live migrate successfully on metal cluster
@@ -176,7 +177,7 @@ Plans:
 **Plans**: 1 plan
 
 Plans:
-- [x] 13-01-PLAN.md — Hardware validation on metal cluster
+- [x] 13-01-PLAN.md - Hardware validation on metal cluster
 
 #### Phase 14: Error Resilience and Mount Storm Prevention
 **Goal**: Prevent corrupted filesystems from causing cluster-wide mount storms and system volume interference
@@ -193,12 +194,14 @@ Plans:
 **Plans**: 4 plans
 
 Plans:
-- [x] 14-01-PLAN.md — NQN prefix validation and configurable filtering
-- [x] 14-02-PLAN.md — Safe procmounts parsing with timeout and duplicate detection
-- [x] 14-03-PLAN.md — Circuit breaker and filesystem health checks
-- [x] 14-04-PLAN.md — Graceful shutdown and deployment configuration
+- [x] 14-01-PLAN.md - NQN prefix validation and configurable filtering
+- [x] 14-02-PLAN.md - Safe procmounts parsing with timeout and duplicate detection
+- [x] 14-03-PLAN.md - Circuit breaker and filesystem health checks
+- [x] 14-04-PLAN.md - Graceful shutdown and deployment configuration
 
-### 📋 v0.7.0 State Management Refactoring (Planned)
+</details>
+
+### v0.7.0 State Management Refactoring (Planned)
 
 **Milestone Goal:** Use Kubernetes VolumeAttachment objects as source of truth for attachment state
 
@@ -220,15 +223,15 @@ Plans:
 **Plans**: 4 plans
 
 Plans:
-- [ ] 15-01-PLAN.md — VolumeAttachment watcher and list/watch implementation
-- [ ] 15-02-PLAN.md — Rebuild attachment state from VolumeAttachment objects on startup
-- [ ] 15-03-PLAN.md — Grace period detection from multiple VolumeAttachment objects
-- [ ] 15-04-PLAN.md — Testing: controller restart scenarios, stale annotation handling
+- [ ] 15-01-PLAN.md - VolumeAttachment listing helpers and filtering
+- [ ] 15-02-PLAN.md - Rebuild state from VolumeAttachments on startup
+- [ ] 15-03-PLAN.md - PV annotations informational-only documentation
+- [ ] 15-04-PLAN.md - Comprehensive testing for restart scenarios
 
 ## Progress
 
 **Execution Order:**
-Phases execute in numeric order: 11 → 12 → 13 → 14 → 15 (planned)
+Phases execute in numeric order: 11 -> 12 -> 13 -> 14 -> 15 (planned)
 
 | Phase | Milestone | Plans Complete | Status | Completed |
 |-------|-----------|----------------|--------|-----------|
